@@ -28,6 +28,7 @@ import static org.apache.james.jmap.JMAPTestingConstants.DOMAIN;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.Matchers.hasSize;
 
+import java.net.URI;
 import java.net.URL;
 import java.util.List;
 import java.util.Optional;
@@ -51,7 +52,7 @@ import org.apache.james.jmap.api.model.PushSubscription;
 import org.apache.james.jmap.api.model.PushSubscriptionCreationRequest;
 import org.apache.james.jmap.api.model.PushSubscriptionServerURL;
 import org.apache.james.jmap.api.pushsubscription.PushSubscriptionRepository;
-import org.apache.james.jmap.draft.JmapGuiceProbe;
+import org.apache.james.jmap.JmapGuiceProbe;
 import org.apache.james.mailbox.model.MailboxACL;
 import org.apache.james.mailbox.model.MailboxPath;
 import org.apache.james.modules.ACLProbeImpl;
@@ -75,9 +76,7 @@ import com.google.inject.multibindings.Multibinder;
 import io.restassured.specification.RequestSpecification;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
-import scala.None;
 import scala.Option;
-import scala.collection.immutable.Seq;
 
 class MemoryUserDeletionIntegrationTest {
     public static class MemoryUserDeletionIntegrationTestProbe implements GuiceProbe {
@@ -290,7 +289,7 @@ class MemoryUserDeletionIntegrationTest {
         server.getProbe(MemoryUserDeletionIntegrationTestProbe.class)
             .addPushSubscriptions(ALICE, new PushSubscriptionCreationRequest(
                 "device",
-                new PushSubscriptionServerURL(new URL("http://whatever/toto")),
+                new PushSubscriptionServerURL(new URI("http://whatever/toto").toURL()),
                 Option.empty(),
                 Option.empty(),
                 PushSubscriptionCreationRequest.noTypes()));
