@@ -20,12 +20,14 @@
 package org.apache.james.linshare;
 
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.util.Objects;
 import java.util.UUID;
 
 import org.apache.commons.configuration2.Configuration;
 
+import com.github.fge.lambdas.Throwing;
 import com.google.common.annotations.VisibleForTesting;
 import com.google.common.base.Preconditions;
 
@@ -41,7 +43,10 @@ public class LinshareConfiguration {
             RequireBasicAuthorization url(URL url);
 
             default RequireBasicAuthorization urlAsString(String url) throws MalformedURLException {
-                return url(new URL(url));
+                if (url == null) {
+                    throw new MalformedURLException("url can not be null");
+                }
+                return url(Throwing.supplier(() -> new URI(url).toURL()).get());
             }
         }
 
